force-app/main/default/objects/Harmony_Navigation_Items__c/Harmony_Navigation_Items__c.object-meta.xml
<CustomObject>
    <label>Harmony Navigation Item</label>
    <nameField>
        <label>Harmony Navigation Item</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Harmony Navigation Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>