force-app/main/default/objects/Harmony_Navigation_Items__c/fields/Doing_the_Work__c.field-meta.xml
<CustomField>
    <fullName>Doing_the_Work__c</fullName>
    <label>Doing the Work</label>
    <length>255</length>
    <type>Text</type>
</CustomField>