force-app/main/default/objects/Harmony_Navigation_Items__c/fields/Invoicing_the_Client__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_the_Client__c</fullName>
    <label>Invoicing the Client</label>
    <length>255</length>
    <type>Text</type>
</CustomField>