force-app/main/default/objects/Harmony_Navigation_Items__c/fields/Selling_the_Work__c.field-meta.xml
<CustomField>
    <fullName>Selling_the_Work__c</fullName>
    <label>Selling the Work</label>
    <length>255</length>
    <type>Text</type>
</CustomField>