force-app/main/default/objects/Harmony_Navigation_Items__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Selling_the_Work__c</columns>
    <columns>Doing_the_Work__c</columns>
    <columns>Invoicing_the_Client__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>